bin/tests/snapshots/inherit_blank_line__c090998d32d80c8357ace657015e3457_lint_errfmt.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;

  # where the code lives
  owner = "me";
}
---
