bin/tests/snapshots/inherit_blank_line__cc8c77f860bfc8fe1545dfa99dcfb849_fix.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  owner = "me";
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,5 @@
 {
   inherit system;
+
   owner = "me";
 }
