bin/tests/snapshots/inherit_blank_line__cc8c77f860bfc8fe1545dfa99dcfb849_lint_errfmt.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  owner = "me";
}
---
<temp_file_path>>3:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
