bin/tests/snapshots/inherit_blank_line__cc8c77f860bfc8fe1545dfa99dcfb849_lint_stderr.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  owner = "me";
}
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   owner = "me";
   │   ──────┬──────  
   │         ╰──────── a blank line should follow the inherit above
───╯
