bin/tests/snapshots/inherit_blank_line__d51afba4b9548b3e4600daf19c788e6c_fix.snap
---
source: bin/tests/inherit_blank_line.rs
---
let
  inherit system;
  owner = "me";
in
  owner
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,6 @@
 let
   inherit system;
+
   owner = "me";
 in
   owner
