bin/tests/snapshots/inherit_blank_line__d51afba4b9548b3e4600daf19c788e6c_lint_errfmt.snap
---
source: bin/tests/inherit_blank_line.rs
---
let
  inherit system;
  owner = "me";
in
  owner
---
<temp_file_path>>3:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
