bin/tests/snapshots/inherit_blank_line__d51afba4b9548b3e4600daf19c788e6c_lint_json.snap
---
source: bin/tests/inherit_blank_line.rs
---
let
  inherit system;
  owner = "me";
in
  owner
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_blank_line",
      "note": "No blank line after `inherit`",
      "code": 36,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 16
            }
          },
          "message": "a blank line should follow the `inherit` above",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 5,
                "column": 8
              }
            },
            "fix": "let\n  inherit system;\n\n  owner = \"me\";\nin\n  owner"
          }
        }
      ]
    }
  ]
}
