bin/tests/snapshots/inherit_blank_line__d51afba4b9548b3e4600daf19c788e6c_lint_stderr.snap
---
source: bin/tests/inherit_blank_line.rs
---
let
  inherit system;
  owner = "me";
in
  owner
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   owner = "me";
   │   ──────┬──────  
   │         ╰──────── a blank line should follow the inherit above
───╯
