bin/tests/snapshots/inherit_blank_line__d7e4157dcc44c24d04fde2a430b38524_fix.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  owner = "me";
  inherit name;
  paths = [ ];
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,9 @@
 {
   inherit system;
-  owner = "me";
+
   inherit name;
+
+  owner = "me";
+
   paths = [ ];
 }
