bin/tests/snapshots/inherit_blank_line__d7e4157dcc44c24d04fde2a430b38524_lint_errfmt.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  owner = "me";
  inherit name;
  paths = [ ];
}
---
<temp_file_path>>3:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
