bin/tests/snapshots/inherit_blank_line__d7e4157dcc44c24d04fde2a430b38524_lint_json.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  owner = "me";
  inherit name;
  paths = [ ];
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_blank_line",
      "note": "No blank line after `inherit`",
      "code": 36,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 16
            }
          },
          "message": "a blank line should follow the `inherit` above",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 6,
                "column": 2
              }
            },
            "fix": "{\n  inherit system;\n\n  owner = \"me\";\n  inherit name;\n\n  paths = [ ];\n}"
          }
        }
      ]
    }
  ]
}
